FIX : Button not working on iOS

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
   background: #f8f8f8;
   border: 1px solid #ffffff;
   box-sizing: border-box;
-  box-shadow: 40px 30px 80px rgba(54, 48, 116, 0.3);
+  -webkit-box-shadow: 40px 30px 80px rgba(54, 48, 116, 0.3);
   border-radius: 60px;
   padding: 2rem;
   display: flex;
@@ -24,7 +24,7 @@
   background: #f6f6f6;
   border: 1px solid #ffffff;
   box-sizing: border-box;
-  box-shadow: 40px 30px 80px rgba(54, 48, 116, 0.3);
+  -webkit-box-shadow: 40px 30px 80px rgba(54, 48, 116, 0.3);
   border-radius: 60px;
   padding: 2rem;
   margin-left: -4rem;
@@ -39,7 +39,7 @@
   display: inline-block;
   background: #f8f8f8;
   border-radius: 40px;
-  box-shadow: inset 10px 10px 10px rgba(0, 0, 0, 0.05),
+  -webkit-box-shadow: inset 10px 10px 10px rgba(0, 0, 0, 0.05),
     inset -10px -10px 20px #ffffff;
   filter: drop-shadow(-10px -10px 5px #ffffff)
     drop-shadow(10px 6px 10px rgba(0, 0, 0, 0.1));
@@ -54,7 +54,7 @@
 
 .track-image img {
   border-radius: 30px;
-  box-shadow: inset 10px 10px 15px rgba(255, 255, 255, 0.2);
+  -webkit-box-shadow: inset 10px 10px 15px rgba(255, 255, 255, 0.2);
   filter: drop-shadow(5px 5px 7px rgba(37, 5, 57, 0.7));
   width: -webkit-fill-available;
   height: 100%;
@@ -95,13 +95,13 @@ button:focus {
 }
 
 .button {
-  box-shadow: -10px -10px 15px #ffffff, 10px 10px 10px rgb(0 0 0 / 5%),
+  -webkit-box-shadow: -10px -10px 15px #ffffff, 10px 10px 10px rgb(0 0 0 / 5%),
     inset 10px 10px 10px rgb(0 0 0 / 7%), inset -10px -10px 20px #ffffff;
 }
 
 .button:active {
   opacity: 1;
-  box-shadow: -6px -6px 10px rgba(255, 255, 255, 0.8),
+  -webkit-box-shadow: -6px -6px 10px rgba(255, 255, 255, 0.8),
     6px 6px 10px rgba(0, 0, 0, 0.2);
 }
 
@@ -128,7 +128,7 @@ button.button.primary.rounded {
   flex-direction: column;
   padding: 0.2rem 0.3rem;
   background: #dedde3;
-  box-shadow: -3px -3px 5px #ffffff, 3px 3px 5px rgba(0, 0, 0, 0.05),
+  -webkit-box-shadow: -3px -3px 5px #ffffff, 3px 3px 5px rgba(0, 0, 0, 0.05),
     inset 3px 3px 5px rgba(0, 0, 0, 0.05), inset -3px -3px 5px #ffffff;
   border-radius: 37px;
 }
@@ -150,7 +150,7 @@ button.button.primary.rounded {
   border-radius: 50%;
   background: var(--white);
   position: absolute;
-  box-shadow: 0px 0.1rem 0.3rem 0px var(--greyLight-3);
+  -webkit-box-shadow: 0px 0.1rem 0.3rem 0px var(--greyLight-3);
   z-index: 200;
   display: flex;
   justify-content: center;
@@ -158,7 +158,7 @@ button.button.primary.rounded {
   background: #ffffff;
   border: 1px solid #ffffff;
   box-sizing: border-box;
-  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.15),
+  -webkit-box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.15),
     inset 10px 10px 10px rgba(0, 0, 0, 0.05), inset -10px -10px 20px #ffffff;
 }
 
@@ -172,13 +172,6 @@ button.button.primary.rounded {
   width: 1.95rem;
   height: 1.95rem;
   border-radius: 50%;
-  background: linear-gradient(
-    327.56deg,
-    #5d24d6 19.23%,
-    #5d24d6 19.24%,
-    #7e74ed 81.76%,
-    #7e74ed 81.76%
-  );
   background: -webkit-linear-gradient(
     327.56deg,
     #5d24d6 19.23%,
@@ -186,7 +179,9 @@ button.button.primary.rounded {
     #7e74ed 81.76%,
     #7e74ed 81.76%
   );
-  box-shadow: 0px 3px 5px rgba(98, 75, 242, 0.63),
+  -webkit-box-shadow: 0px 3px 5px rgba(98, 75, 242, 0.63),
+    inset 10px 10px 15px rgba(255, 255, 255, 0.2);
+    -webkit--webkit-box-shadow: 0px 3px 5px rgba(98, 75, 242, 0.63),
     inset 10px 10px 15px rgba(255, 255, 255, 0.2);
 }
 
@@ -196,8 +191,8 @@ button.button.primary.rounded {
   position: absolute;
   left: 0;
   z-index: 100;
-  background: linear-gradient(327.56deg, #5d24d6 19.23%, #7e74ed 81.76%);
-  box-shadow: 0px 2px 3px rgba(43, 72, 180, 0.4),
+  background: -webkit-linear-gradient(327.56deg, #5d24d6 19.23%, #7e74ed 81.76%);
+  -webkit-box-shadow: 0px 2px 3px rgba(43, 72, 180, 0.4),
     inset 1px 1px 3px rgba(255, 255, 255, 0.4);
   border-radius: 31px;
   height: 0.7rem;
@@ -233,7 +228,7 @@ button.button.primary.rounded {
 }
 
 .favourite {
-  background: linear-gradient(327.56deg, #5f30c1 19.23%, #968ef1 81.76%);
+  background: -webkit-linear-gradient(327.56deg, #5f30c1 19.23%, #968ef1 81.76%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -263,8 +258,8 @@ i.fas.fa-pause.text-white,
   flex-direction: column;
   justify-content: center;
   margin: auto;
-  box-shadow: inset 10px 10px 15px rgba(255, 255, 255, 0.2);
-  background: linear-gradient(
+  -webkit-box-shadow: inset 10px 10px 15px rgba(255, 255, 255, 0.2);
+  background: -webkit-linear-gradient(
     330deg,
     #7268b5 50.46%,
     rgba(167, 150, 234, 1) 100.55%
